Fix Beacon form jumping to top on radio button change (because of focusing pos:absolute :before

--- a/assets/scss/integration/_gform.scss
+++ b/assets/scss/integration/_gform.scss
@@ -80,6 +80,7 @@
   }
 
   .gchoice {
+    @extend %u-pos-relative;
     @extend %u-mv-1;
 
     input {
